Auch getrennte Up / Down Taster können anstelle des Drehimpulsgebers verwendet werden.
Der automatische Wechsel der Menüfunktion nach 5 Sekunden wurde deaktiviert.
Reihenfolge der Beispielfrequenzen geändert.
Unterstützung eines Drehimpulsgebers an PD2 und PD3 für mega328 für einfachere Menü-Bedienung.
Bei Frequenzmessung mit 4-zeiligem Display werden für Periodenmessung Zeile 3+4 genutzt.
Flip für ST7565 Kontroller horizontal und vertikal getrennt wählbar.
Für den Selbsttest wird der Kalibrationsteil mit dem externen Kondensator nur durchgeführt,
 wenn zum ersten mal kalibriert wird oder der Selbsttest mit der Menufunktion aufgerufen wird.
Menü-Funktion für vollständigen Selbsttest, bei Transistortester mit kurzgeschlossenen Testpins
  wird bei freigeschalteter Menüfunktion nur der Kalibrationsteil aufgerufen.
Menü-Funktion für Test von Impulsdrehgebern.
Unterstützung eines graphischen 128x64 LCD mit ST7565 Kontroller von Wolfgang Sch.
Unterstützung der italienischen Sprache LANG_ITALIAN.
Bei der Frequenzerzeugung wird als Zeitmarke ein Punkt für 30 Sekunden ausgegeben. 
Pinbezeichnungen bei TRIAC von GCA in G12 geändert.
1.10 / 09.04.2014
Bedienung der Menuefunktionen überarbeitet (Zeitsteuerung und POWER_OFF Option).
Erweiterung des Meßbereichs für separate C+ESR Messung, 2uF-50mF .
Vorbereitung zur Unterstützung von mega324/644/1284.
Zusatzabfrage in CheckPins wegen Falschdetektion von TRIAC als NPNp.
Separate C+ESR Messung auf TP1 und TP3 im Menü wählbar.
Prellunterdrückung in wait_for_key_ms() Funktion.
Korrekturen bei der Frequenzmessung, Auflösung der Frequenz bei niedriger Frequenz bis 1uHz.
Generator mit einstellbarer Pulsweite eingebaut (10-Bit PWM).
Makefile Optionen TQFP_ADC6 und TQFP_ADC7 für die Nutzung der zusätzlichen TQFP ADC Eingänge.
Die Periodenmessungsanteil der Frequenzmessung erfolgt mit anähernd gleicher Meßzeit.
Funktion DisplayValue unterstützt bis zu 7 Dezimalstellen.