@@ -1,3 +1,5 @@
+Für die höchste Auflösung bei Impulsdrehgebern ohne Rastung WITH_ROTARY_SWITCH=5 .
+Die Vergangenheit der Drehgeber-Zustände wird nicht mehr bei jedem wait_for_key_ms Aufruf gelöscht.
 Auch getrennte Up / Down Taster können anstelle des Drehimpulsgebers verwendet werden.
 Der automatische Wechsel der Menüfunktion nach 5 Sekunden wurde deaktiviert.
 Reihenfolge der Beispielfrequenzen geändert.
